--- a/HeatMapTest/calHeatMap.html
+++ b/HeatMapTest/calHeatMap.html
@@ -3,14 +3,19 @@
 <html>
 
 <head>
-	<title>CalHeatMap Test</title>
+	<title>CalHeatMap</title>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 	<script type="text/javascript" src="cal-heatmap.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script type="text/javascript" src="jquery.tooltipster.js"></script>
+	<script type="text/javascript" src="jquery.tooltipster.min.js"></script>
+
 	<link rel="stylesheet" href="cal-heatmap.css" />
+	<link rel="stylesheet" href="tooltipster.css"/>
 	<link rel="stylesheet" href="style.css"/>
 </head>
+
 
 <body>
 
@@ -20,7 +25,6 @@
 	<div id="jumpTo">Jump To November 2015</div>
 	<div id="rewind">Go Back to Start</div>
 	<div id="onClick-placeholder"></div>
-	
 
 	<script type="text/javascript">
 		var cal = new CalHeatMap();
@@ -45,8 +49,7 @@
 			cellSize: 20,
 			cellRadius: 1,
 
-			//domainGutter: 5,
-			domainMargin: [10, 10, 10, 10],
+			domainMargin: [10, 5, 10, 5],
 			domainDynamicDimension: false,
 
 
@@ -93,6 +96,7 @@
 		$("#rewind").on("click", function(event) {
 			cal.rewind();
 		});
+
 
 		/*$("#new-data").on("click", function() {
 			cal.update(newData);
