--- a/HeatMapTest/calHeatMapContinuous.html
+++ b/HeatMapTest/calHeatMapContinuous.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>CalHeatMap</title>
+	<title>CalHeatMapContinuous</title>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 	<script type="text/javascript" src="cal-heatmap.min.js"></script>
@@ -13,17 +13,15 @@
 
 	<link rel="stylesheet" href="cal-heatmap.css" />
 	<link rel="stylesheet" href="tooltipster.css"/>
-	<link rel="stylesheet" href="style.css"/>
+	<link rel="stylesheet" href="style_continuous.css"/>
 </head>
 
 
 <body>
 
 	<div id="cal-heatmap"></div>
-	<div class=button id="previous">Previous</div>
-	<div class=button id="next">Next</div>
-	<div class=button id="jumpTo">Jump To October</div>
-	<div class=button id="rewind">Go Back to Start</div>
+	<!--<div id="previous">Previous</div>
+	<div id="next">Next</div>-->
 	<div id="onClick-placeholder"></div>
 
 	<script type="text/javascript">
@@ -33,7 +31,7 @@
 
 			itemName: "file",
 
-			domain: "month",
+			domain: "year",
 
 			subDomain: "day",
 			subDomainTextFormat: function(date ,value) {
@@ -42,14 +40,14 @@
 
 			data: "data.json",
 
-			range: 7,
+			range: 1,
 
 			animationDuration: 1500,
 			
-			cellSize: 26,
+			cellSize: 20.5,
 			cellRadius: 1,
 
-			domainMargin: [10, 5, 10, 5],
+			domainMargin: [10, 0, 0, 45],
 			domainDynamicDimension: false,
 
 
@@ -58,12 +56,12 @@
 			displayLegend: true,
 			legend: [100, 200, 300, 400, 500, 600, 700, 800, 900, 1000],
 			legendCellSize: 20,
-			legendVerticalPosition: "top",
+			legendVerticalPosition: "bottom",
 			legendHorizontalPosition: "center",
 			legendOrientation: "horizontal",
-			legendColors: ["#efefef", "steelblue"],
-			legendCellPadding: 5,
-			legendMargin: [10, 0, 0, 50],
+			legendColors: ["#f4decd", "#ad001d"],
+			legendCellPadding: 1,
+			legendMargin: [30, 50, 5, 50],
 
 
 			start: new Date(2015, 0, 1),
@@ -86,22 +84,6 @@
 
 
 		});
-
-		$("#jumpTo").on("click", function(event) {
-			cal.jumpTo(new Date(2015, 09));
-		});
-
-		$("#rewind").on("click", function(event) {
-			cal.rewind();
-		});
-
-
-		/*$("#new-data").on("click", function() {
-			cal.update(newData);
-		});*/
-
-
-		//cal = cal.destroy();
 
 		
 	</script>
