--- a/HeatMapTest/calHeatMapContinuous.html
+++ b/HeatMapTest/calHeatMapContinuous.html
@@ -8,11 +8,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 	<script type="text/javascript" src="cal-heatmap.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script type="text/javascript" src="jquery.tooltipster.js"></script>
-	<script type="text/javascript" src="jquery.tooltipster.min.js"></script>
-
+	
 	<link rel="stylesheet" href="cal-heatmap.css" />
-	<link rel="stylesheet" href="tooltipster.css"/>
 	<link rel="stylesheet" href="style_continuous.css"/>
 </head>
 
@@ -20,71 +17,123 @@
 <body>
 
 	<div id="cal-heatmap"></div>
-	<!--<div id="previous">Previous</div>
-	<div id="next">Next</div>-->
 	<div id="onClick-placeholder"></div>
 
 	<script type="text/javascript">
-		var cal = new CalHeatMap();
+		
+		// get data from php page
+		$.ajax({
+            method: "GET",
+            url: "getprocessedfilecount.php",
+            dataType: "json",
+        })
+        .done(function( data ) {
 
-		cal.init({
+        	// array of values from json data to use when setting legend
+        	var inputValues = getInputValues(data);
 
-			itemName: "file",
+			var cal = new CalHeatMap();
 
-			domain: "year",
+			//draw heatmap
+			cal.init({
 
-			subDomain: "day",
-			subDomainTextFormat: function(date ,value) {
-				return value;
-			},
+				itemName: "file",
 
-			data: "data.json",
+				domain: "year",
+				domainMargin: [10, 0, 0, 45],
+				domainDynamicDimension: false, // all domains have same dimension (based on biggest)
+				label: { // domainLabel position
+					position: "top",
+					align: "right",
+				},
 
-			range: 1,
+				subDomain: "day",
+				//display number of itemNames instead of date inside subDomain
+				subDomainTextFormat: function(date ,value) {
+					return value;
+				},
 
-			animationDuration: 1500,
-			
-			cellSize: 20.5,
-			cellRadius: 1,
+				start: new Date(2015, 0, 1),
 
-			domainMargin: [10, 0, 0, 45],
-			domainDynamicDimension: false,
+				data: data, // json data from php file
 
+				range: 1, // how many domain instances are displayed
 
-			tooltip: true,
+				animationDuration: 1500,
+				
+				cellSize: 20.5,
+				cellRadius: 1,
 
-			displayLegend: true,
-			legend: [100, 200, 300, 400, 500, 600, 700, 800, 900, 1000],
-			legendCellSize: 20,
-			legendVerticalPosition: "bottom",
-			legendHorizontalPosition: "center",
-			legendOrientation: "horizontal",
-			legendColors: ["#f4decd", "#ad001d"],
-			legendCellPadding: 1,
-			legendMargin: [30, 50, 5, 50],
+				tooltip: true,
 
+				displayLegend: true,
+				legend: setLegend(inputValues), // customizes legend based on input values of itemNames
+				legendCellSize: 20,
+				legendVerticalPosition: "bottom",
+				legendHorizontalPosition: "center",
+				legendOrientation: "horizontal",
+				legendColors: ["#f4decd", "#ad001d"],
+				legendCellPadding: 1,
+				legendMargin: [30, 50, 5, 50],
 
-			start: new Date(2015, 0, 1),
+				onClick: function(date, nb) {
+					$("#onClick-placeholder").html("<b>" +
+						(nb === null ? "unknown" : nb)+ "</b> items on <b>" +
+						date + "</b>"
+					);
+				},
 
-			label: {
-				position: "top",
-				align: "right",
-			},
-
-			onClick: function(date, nb) {
-				$("#onClick-placeholder").html("<b>" +
-					(nb === null ? "unknown" : nb)+ "</b> items on <b>" +
-					date + "</b>"
-				);
-			},
-
-
-			nextSelector: "#next",
-			previousSelector: "#previous",
-
+				// defines buttons that move through cal 
+				nextSelector: "#next",
+				previousSelector: "#previous",
 
 		});
 
+		//////////////////////////////////////////////////////////
+		//////////////////***HELPER FUNCTIONS***//////////////////
+		//////////////////////////////////////////////////////////
+
+		// gets values from json data
+			function getInputValues(object){
+	        	var input = new Array;
+
+	        	for(var key in data) {
+	    			var value = data[key];
+	    			input.push(value);
+				}
+				return input;
+			}
+
+			// returns an array of legend values based on average input
+			function setLegend(input){
+				var sum = 0;
+				var average = 0;
+				var steps = 5;
+				var legendValues = new Array();
+
+				// find average of input
+				avg(input);
+					function avg(numList){
+						for(var i = 0; i < numList.length; i++){
+							sum += numList[i];
+						}
+						average = Math.floor(sum/numList.length);
+					}
+
+				// find how much legend steps up each time
+				var stepValue = Math.floor(average/steps);
+
+				// legend steps up by stepValue step*2 times
+				legendStep(stepValue);
+					function legendStep(step){
+						for(var i = 0; i <= steps*2; i++){
+							legendValues[i] = (step*i)+step; // to start at stepValue instead of 0
+						}
+					}
+
+				return legendValues;
+			}
+		});
 		
 	</script>
 
