--- a/HeatMapTest/calHeatMapVertical.html
+++ b/HeatMapTest/calHeatMapVertical.html
@@ -8,17 +8,13 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 	<script type="text/javascript" src="cal-heatmap.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script type="text/javascript" src="jquery.tooltipster.js"></script>
-	<script type="text/javascript" src="jquery.tooltipster.min.js"></script>
 
 	<link rel="stylesheet" href="cal-heatmap.css" />
-	<link rel="stylesheet" href="tooltipster.css"/>
 	<link rel="stylesheet" href="style_week.css"/>
 </head>
 
 
 <body>
-
 
 	<div class=button id="previous">Previous</div>
 	<div class=button id="next">Next</div>
@@ -28,56 +24,129 @@
 	<div id="onClick-placeholder"></div>
 
 	<script type="text/javascript">
-		var cal = new CalHeatMap();
 
-		cal.init({
+		// get data from php page
+		$.ajax({
+            method: "GET",
+            url: "getprocessedfilecount.php",
+            dataType: "json",
+        })
+        .done(function( data ) {
 
-			itemName: "file",
+        	// array of values from json data to use when setting legend
+        	var inputValues = getInputValues(data);
 
-			domain: "week",
+        	// draw heatmap
+			var cal = new CalHeatMap();
 
-			subDomain: "x_day",
-			subDomainTextFormat: "%d",
+			cal.init({
 
-			verticalOrientation: true,
+				itemName: "file",
 
-			data: "data.json",
+				domain: "week",
+				label: { // domainLabel position
+					position: "top",
+					align: "right",
+				},
+				domainLabelFormat: "%b %W", // label by month abbr and week number
+				domainMargin: [1, 1, 1, 1],
+				domainGutter: 1,
+				domainDynamicDimension: false, // all domains have same dimension (based on biggest)
 
-			range: 28,
+				verticalOrientation: true, // display domains vertically
 
-			animationDuration: 500,
-			
-			cellSize: 26,
-			cellRadius: 5,
+				subDomain: "x_day", // display weeks horizontally
+				subDomainTextFormat: "%d",
 
-			domainLabelFormat: "%b %W",
-			domainMargin: [1, 1, 1, 1],
-			domainGutter: 1,
-			domainDynamicDimension: true,
+				start: new Date(2015, 0, 1),
 
-			tooltip: true,
+				data: data, // json data from php file
 
-			displayLegend: false,
-			legend: [100, 200, 300, 400, 500, 600, 700, 800, 900, 1000],
-			legendCellSize: 20,
-			legendVerticalPosition: "center",
-			legendHorizontalPosition: "right",
-			legendOrientation: "vertical",
-			legendColors: ["#d2de76", "#12481b"],
-			legendMargin: [15, 0, 0, 20],
+				range: 28, // how many domain instances are displayed
+
+				animationDuration: 500,
+				
+				cellSize: 26,
+				cellRadius: 5,
+
+				domainLabelFormat: "%b %W",
+				domainMargin: [1, 1, 1, 1],
+				domainGutter: 1,
+				domainDynamicDimension: false, // all domains have same domension (based on biggest)
+
+				tooltip: true,
+
+				displayLegend: false,
+				legend: setLegend(inputValues), /// customizes legend based on input values of itemNames
+				legendCellSize: 20,
+				legendVerticalPosition: "center",
+				legendHorizontalPosition: "right",
+				legendOrientation: "vertical",
+				legendColors: ["#d2de76", "#12481b"],
+				legendMargin: [15, 0, 0, 20],
+
+				// defines buttons that move through cal 
+				nextSelector: "#next",
+				previousSelector: "#previous",
+
+			});
 
 
-			start: new Date(2015, 0, 1),
+			//////////////////////////////////////////////////////////
+			//////////////////***HELPER FUNCTIONS***//////////////////
+			//////////////////////////////////////////////////////////
 
-			label: {
-				position: "top",
-				align: "right",
-			},
+			// moves cal to designated date
+			$("#jumpTo").on("click", function(event) {
+				cal.jumpTo(new Date(2015, 09));
+			});
 
-			nextSelector: "#next",
-			previousSelector: "#previous",
+			// moves cal back to start date
+			$("#rewind").on("click", function(event) {
+				cal.rewind();
+			});
 
 
+			// gets values from json data
+			function getInputValues(object){
+	        	var input = new Array;
+
+	        	for(var key in data) {
+	    			var value = data[key];
+	    			input.push(value);
+				}
+				return input;
+			}
+
+			// returns an array of legend values based on average input
+			function setLegend(input){
+				var sum = 0;
+				var average = 0;
+				var steps = 5;
+				var legendValues = new Array();
+
+				// find average of input
+				avg(input);
+					function avg(numList){
+						for(var i = 0; i < numList.length; i++){
+							sum += numList[i];
+						}
+						average = Math.floor(sum/numList.length);
+					}
+
+				// find how much legend steps up each time
+				var stepValue = Math.floor(average/steps);
+
+				// legend steps up by stepValue step*2 times
+				legendStep(stepValue);
+					function legendStep(step){
+						for(var i = 0; i <= steps*2; i++){
+							legendValues[i] = (step*i)+step; // to start at stepValue instead of 0
+						}
+					}
+
+				return legendValues;
+			}
 
 		});
 
