--- a/HeatMapTest/calHeatMapWeek.html
+++ b/HeatMapTest/calHeatMapWeek.html
@@ -8,11 +8,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 	<script type="text/javascript" src="cal-heatmap.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script type="text/javascript" src="jquery.tooltipster.js"></script>
-	<script type="text/javascript" src="jquery.tooltipster.min.js"></script>
-
+	
 	<link rel="stylesheet" href="cal-heatmap.css" />
-	<link rel="stylesheet" href="tooltipster.css"/>
 	<link rel="stylesheet" href="style_week.css"/>
 </head>
 
@@ -27,81 +24,129 @@
 	<div id="onClick-placeholder"></div>
 
 	<script type="text/javascript">
-		var cal = new CalHeatMap();
 
-		cal.init({
+		// get data from php page
+		$.ajax({
+            method: "GET",
+            url: "getprocessedfilecount.php",
+            dataType: "json",
+        })
+        .done(function( data ) {
 
-			itemName: "file",
+        	// array of values from json data to use when setting legend
+        	var inputValues = getInputValues(data);
 
-			domain: "week",
+			var cal = new CalHeatMap();
 
-			subDomain: "day",
-			subDomainTextFormat: "%d",
+			// draw heatmap
+			cal.init({
 
-			//verticalOrientation: true,
+				itemName: "file",
 
-			data: "data.json",
+				domain: "week",
+				domainLabelFormat: "%W", // label by week number
+				domainMargin: [5, 5, 5, 5],
+				domainGutter: 5,
+				domainDynamicDimension: false, // all domains have same dimension (based on biggest)
+				label: { // domainLabel position
+					position: "top",
+					align: "right",
+				},
 
-			range: 28,
+				subDomain: "day",
+				subDomainTextFormat: "%d",
 
-			animationDuration: 500,
-			
-			cellSize: 26,
-			cellRadius: 5,
+				start: new Date(2015, 0, 1),
 
-			domainLabelFormat: "%b %W",
-			domainMargin: [5, 5, 5, 5],
-			domainGutter: 5,
-			domainDynamicDimension: false,
+				data: data, // json data from php file
 
-			tooltip: true,
+				range: 28, // how many domain instances are displayed
 
-			displayLegend: true,
-			legend: [100, 200, 300, 400, 500, 600, 700, 800, 900, 1000],
-			legendCellSize: 20,
-			legendVerticalPosition: "center",
-			legendHorizontalPosition: "right",
-			legendOrientation: "vertical",
-			legendColors: ["#d2de76", "#12481b"],
-			legendMargin: [15, 0, 0, 20],
+				animationDuration: 500,
+				
+				cellSize: 26,
+				cellRadius: 5,
 
+				tooltip: true,
 
-			start: new Date(2015, 0, 1),
+				displayLegend: true,
+				legend: setLegend(inputValues), // customizes legend based on input values of itemNames
+				legendCellSize: 20,
+				legendVerticalPosition: "center",
+				legendHorizontalPosition: "right",
+				legendOrientation: "vertical",
+				legendColors: ["#d2de76", "#12481b"],
+				legendMargin: [15, 0, 0, 20],
 
-			label: {
-				position: "top",
-				align: "right",
-			},
+				onClick: function(date, nb) {
+					$("#onClick-placeholder").html("<b>" +
+						(nb === null ? "unknown" : nb)+ "</b> items on <b>" +
+						date + "</b>"
+					);
+				},
 
-			onClick: function(date, nb) {
-				$("#onClick-placeholder").html("<b>" +
-					(nb === null ? "unknown" : nb)+ "</b> items on <b>" +
-					date + "</b>"
-				);
-			},
+				// defines buttons that move through cal 
+				nextSelector: "#next",
+				previousSelector: "#previous",
 
-
-			nextSelector: "#next",
-			previousSelector: "#previous",
+			});
 
 
+			//////////////////////////////////////////////////////////
+			//////////////////***HELPER FUNCTIONS***//////////////////
+			//////////////////////////////////////////////////////////
+
+			// moves cal to designated date
+			$("#jumpTo").on("click", function(event) {
+				cal.jumpTo(new Date(2015, 09));
+			});
+
+			// moves cal back to start date
+			$("#rewind").on("click", function(event) {
+				cal.rewind();
+			});
+
+			// gets values from json data
+			function getInputValues(object){
+	        	var input = new Array;
+
+	        	for(var key in data) {
+	    			var value = data[key];
+	    			input.push(value);
+				}
+				return input;
+			}
+
+			// returns an array of legend values based on average input
+			function setLegend(input){
+				var sum = 0;
+				var average = 0;
+				var steps = 5;
+				var legendValues = new Array();
+
+				// find average of input
+				avg(input);
+					function avg(numList){
+						for(var i = 0; i < numList.length; i++){
+							sum += numList[i];
+						}
+						average = Math.floor(sum/numList.length);
+					}
+
+				// find how much legend steps up each time
+				var stepValue = Math.floor(average/steps);
+
+				// legend steps up by stepValue step*2 times
+				legendStep(stepValue);
+					function legendStep(step){
+						for(var i = 0; i <= steps*2; i++){
+							legendValues[i] = (step*i)+step; // to start at stepValue instead of 0
+						}
+					}
+
+				return legendValues;
+			}
 		});
-
-		$("#jumpTo").on("click", function(event) {
-			cal.jumpTo(new Date(2015, 09));
-		});
-
-		$("#rewind").on("click", function(event) {
-			cal.rewind();
-		});
-
-
-		/*$("#new-data").on("click", function() {
-			cal.update(newData);
-		});*/
-
-
-		//cal = cal.destroy();
 
 		
 	</script>
