added jump to years/months buttons

--- a/Cal-HeatMap/GlobalLit_ Dashboard.html
+++ b/Cal-HeatMap/GlobalLit_ Dashboard.html
@@ -159,12 +159,15 @@ Curious Learning
                  <div id="heatmap_standard_background" class="box-body">
                     <div class="container-fluid">
                             <h2>
-                                <div id="heatmap_standard"></div>
-                                <div id="years">
-
+                                <div id="standard">
+                                    <div id="heatmap_standard"></div>
+                                    <div class=button id="previous">Prev</div>
+                                    <div class=button id="next">Next</div>
+                                    <div id="button_container">
+                                        <div class=years></div>
+                                        <div id="months"></div>
+                                    </div>
                                 </div>
-                                <div class=button id="previous">Previous</div>
-                                <div class=button id="next">Next</div>
                             </h2>
                     </div>
                 </div>
@@ -177,10 +180,18 @@ Curious Learning
                     <div id="heatmap_continuous_background" class="box-body">
                         <div class="container-fluid">
                             <h2>
-                                <div id="heatmap_continuous"></div>
-                                <div id="onClick-placeholder"></div>
-                                <div class=button id="prev">Previous</div>
-                                <div class=button id="n">Next</div>
+                                <div id="continuous">
+                                    <!--<div id="heatmap_with_legend">
+                                        <div id="days">
+                                            <div class=day>M</div><br><div class=day>T</div><br><div class=day>W</div><br><div class=day>TH</div><br><div class=day>F</div><br><div class=day>S</div><br><div class=day>S</div>
+                                        </div>  -->  
+                                        <div id="heatmap_continuous"></div>
+                                    <!--</div>-->
+                                    <div id="onClick-placeholder"></div>
+                                    <div class=button id="prev">Prev</div>
+                                    <div class=button id="n">Next</div>
+                                    <div class=years></div>
+                                </div>
                             </h2>		
                         </div>
                     </div>
