added week legendto cont. heatmap

--- a/Cal-HeatMap/GlobalLit_ Dashboard.html
+++ b/Cal-HeatMap/GlobalLit_ Dashboard.html
@@ -26,19 +26,11 @@
         <link href="./GlobalLit_ Dashboard_files/dataTables.bootstrap.css" rel="stylesheet" type="text/css">
         <!-- Theme style -->
         <link href="./GlobalLit_ Dashboard_files/AdminLTE.css" rel="stylesheet" type="text/css">
-        <!-- jQuery 2.0.2 -->
-        <script src="./GlobalLit_ Dashboard_files/jquery.min.js"></script>
         <!-- calHeatMap -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
-        <script type="text/javascript" src="./GlobalLit_ Dashboard_files/cal-heatmap.min.js"></script>
-        <link rel="stylesheet" href="./GlobalLit_ Dashboard_files/cal-heatmap.css" />
-        <link rel="stylesheet" href="./GlobalLit_ Dashboard_files/cal-heatmap_customstyle.css"/>
-        <!-- Moment -->
-        <script type="text/javascript" src="//cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
-        <!-- Daterange Picker -->
-        <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
-        <script src="./GlobalLit_ Dashboard_files/daterangepicker2.js"></script>
-
+        <link rel="stylesheet" href="./GlobalLit_ Dashboard_files/cal-heatmap.css" type="text/css"/>
+        <link rel="stylesheet" href="./GlobalLit_ Dashboard_files/cal-heatmap_customstyle.css" type="text/css"/>
+        <!-- Daterange picker -->
+        <link rel="stylesheet" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" type="text/css"/>
 
 
 
@@ -145,8 +137,6 @@ Curious Learning
 
 <!-- Nothing above this line should be modified.  It's generated at runtime. -->
 
-<script src="./GlobalLit_ Dashboard_files/calHeatMapVisualizations.js"> </script>
-
 <section class="content">
     <div class="row">
         <section class="col-lg-11">
@@ -181,12 +171,8 @@ Curious Learning
                         <div class="container-fluid">
                             <h2>
                                 <div id="continuous">
-                                    <!--<div id="heatmap_with_legend">
-                                        <div id="days">
-                                            <div class=day>M</div><br><div class=day>T</div><br><div class=day>W</div><br><div class=day>TH</div><br><div class=day>F</div><br><div class=day>S</div><br><div class=day>S</div>
-                                        </div>  -->  
-                                        <div id="heatmap_continuous"></div>
-                                    <!--</div>-->
+                                    <div id="days">MTWTFSS</div>
+                                    <div id="heatmap_continuous"></div>  
                                     <div id="onClick-placeholder"></div>
                                     <div class=button id="prev">Prev</div>
                                     <div class=button id="n">Next</div>
@@ -202,9 +188,16 @@ Curious Learning
 </section>
 
 <!-- Nothing below this line should be modified.  It's generated at runtime.  However, if truly needed, it can be completely removed. -->
-
+<!-- Daterange picker -->
+<script src="./GlobalLit_ Dashboard_files/daterangepicker2.js" type="text/javascript"></script>
+<!-- Moment -->
+<script src="//cdn.jsdelivr.net/momentjs/latest/moment.min.js" type="text/javascript"></script>
 <!-- jQuery 2.0.2 -->
-<!--<script src="./GlobalLit_ Dashboard_files/jquery.min(1).js"></script>-->
+<script src="./GlobalLit_ Dashboard_files/jquery.min.js" type-"text/javascript"></script>
+<!-- calHeatMap -->
+<script src="./GlobalLit_ Dashboard_files/calHeatMapVisualizations.js"> </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8" type="text/javascript"></script>
+<script src="./GlobalLit_ Dashboard_files/cal-heatmap.min.js" type="text/javascript"></script>
 <!-- jQuery UI 1.10.3 -->
 <script src="./GlobalLit_ Dashboard_files/jquery-ui-1.10.3.min.js" type="text/javascript"></script>
 <!-- Bootstrap -->
