--- a/Cal-HeatMap/HeatMapExamples/calHeatMap.html
+++ b/Cal-HeatMap/HeatMapExamples/calHeatMap.html
@@ -6,11 +6,11 @@
 	<title>CalHeatMap</title>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
-	<script type="text/javascript" src="cal-heatmap.min.js"></script>
+	<script type="text/javascript" src="./GlobalLit_ Dashboard_files/cal-heatmap.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-	<link rel="stylesheet" href="cal-heatmap.css" />
-	<link rel="stylesheet" href="cal-heatmap_customstyle.css"/>
+	<link rel="stylesheet" href="./GlobalLit_ Dashboard_files/cal-heatmap.css" />
+	<link rel="stylesheet" href="./GlobalLit_ Dashboard_files/cal-heatmap_customstyle.css"/>
 </head>
 
 
