updated weekday legend on cont. heatmap & changed tooltip titles

--- a/Cal-HeatMap/GlobalLit_ Dashboard.html
+++ b/Cal-HeatMap/GlobalLit_ Dashboard.html
@@ -26,11 +26,19 @@
         <link href="./GlobalLit_ Dashboard_files/dataTables.bootstrap.css" rel="stylesheet" type="text/css">
         <!-- Theme style -->
         <link href="./GlobalLit_ Dashboard_files/AdminLTE.css" rel="stylesheet" type="text/css">
+        <!-- jQuery 2.0.2 -->
+        <script src="./GlobalLit_ Dashboard_files/jquery.min.js" type-"text/javascript"></script>
         <!-- calHeatMap -->
         <link rel="stylesheet" href="./GlobalLit_ Dashboard_files/cal-heatmap.css" type="text/css"/>
         <link rel="stylesheet" href="./GlobalLit_ Dashboard_files/cal-heatmap_customstyle.css" type="text/css"/>
+        <!-- Moment -->
+        <script src="//cdn.jsdelivr.net/momentjs/latest/moment.min.js" type="text/javascript"></script>
         <!-- Daterange picker -->
         <link rel="stylesheet" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" type="text/css"/>
+        <script src="./GlobalLit_ Dashboard_files/daterangepicker2.js" type="text/javascript"></script>
+        <script src="./GlobalLit_ Dashboard_files/jquery.tipsy.js"> </script>
+        <link href="./GlobalLit_ Dashboard_files/tipsy.css"></script>
+
 
 
 
@@ -136,7 +144,6 @@ Curious Learning
 </section>
 
 <!-- Nothing above this line should be modified.  It's generated at runtime. -->
-
 <section class="content">
     <div class="row">
         <section class="col-lg-11">
@@ -188,14 +195,9 @@ Curious Learning
 </section>
 
 <!-- Nothing below this line should be modified.  It's generated at runtime.  However, if truly needed, it can be completely removed. -->
-<!-- Daterange picker -->
-<script src="./GlobalLit_ Dashboard_files/daterangepicker2.js" type="text/javascript"></script>
-<!-- Moment -->
-<script src="//cdn.jsdelivr.net/momentjs/latest/moment.min.js" type="text/javascript"></script>
-<!-- jQuery 2.0.2 -->
-<script src="./GlobalLit_ Dashboard_files/jquery.min.js" type-"text/javascript"></script>
+
 <!-- calHeatMap -->
-<script src="./GlobalLit_ Dashboard_files/calHeatMapVisualizations.js"> </script>
+<script src="./GlobalLit_ Dashboard_files/calHeatMapVisualizations.js" type="text/javascript"> </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8" type="text/javascript"></script>
 <script src="./GlobalLit_ Dashboard_files/cal-heatmap.min.js" type="text/javascript"></script>
 <!-- jQuery UI 1.10.3 -->
