attempting to allow multiple heatmaps

--- a/Cal-HeatMap/GlobalLit_ Dashboard.html
+++ b/Cal-HeatMap/GlobalLit_ Dashboard.html
@@ -153,37 +153,37 @@ Curious Learning
                         Standard Cal Heatmap
                     </div>
                 </div>
-                 <div id="heatmap_standard_background" class="box-body">
+                 <div id="standard_background" class="box-body">
                     <div class="container-fluid">
                             <h2>
                                 <div id="standard">
-                                    <div id="heatmap_standard"></div>
+                                    <div id="S0"></div>
                                     <div class=button id="previous">Prev</div>
                                     <div class=button id="next">Next</div>
                                     <div id="button_container">
-                                        <div class=years></div>
+                                        <div class=yearsStandard></div>
                                         <div id="months"></div>
                                     </div>
                                 </div>
                             </h2>
                     </div>
                 </div>
-			    <div id="heatmap_continuous_header" class="box box-primary">
-                    <div id="heatmap_continuous_header_inner" class="box-header" style="cursor: move;">
+			    <div id="continuous_header" class="box box-primary">
+                    <div id="continuous_header_inner" class="box-header" style="cursor: move;">
                         <div class="box-title">
                             Continuous Cal Heatmap
                         </div>
                     </div>
-                    <div id="heatmap_continuous_background" class="box-body">
+                    <div id="continuous_background" class="box-body">
                         <div class="container-fluid">
                             <h2>
                                 <div id="continuous">
                                     <div id="days">MTWTFSS</div>
-                                    <div id="heatmap_continuous"></div>  
+                                    <div id="continuous1"></div>  
                                     <div id="onClick-placeholder"></div>
                                     <div class=button id="prev">Prev</div>
                                     <div class=button id="n">Next</div>
-                                    <div class=years></div>
+                                    <div class=yearsContinuous></div>
                                 </div>
                             </h2>		
                         </div>
