--- a/Cal-HeatMap/GlobalLit_ Dashboard_files/GlobalLit_ Dashboard.html
+++ b/Cal-HeatMap/GlobalLit_ Dashboard_files/GlobalLit_ Dashboard.html
@@ -155,7 +155,7 @@ Curious Learning
                      <div id="heatmap_standard_background" class="box-body">
                     <div class="container-fluid">
 							<h2>
-                                <div id="heatmap_standard"></div>
+                                <div id="s1"></div>
                                 <div class=button id="previous">Previous</div>
                                 <div class=button id="next">Next</div>                                            
 							</h2>
